{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 214,
  "lineage": "9d8206d9-02b5-04fc-a932-f5cafd38014d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws_gateway_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750427322914:internet-gateway/igw-0a92832a52431e493",
            "id": "igw-0a92832a52431e493",
            "owner_id": "750427322914",
            "tags": {
              "Name": "aws-gateway-vpc"
            },
            "tags_all": {
              "Name": "aws-gateway-vpc"
            },
            "vpc_id": "vpc-00dbc9620aff76b6a"
          },
          "dependencies": [
            "aws_vpc.aws_postech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aws_route_postech",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750427322914:route-table/rtb-03909c34037acd07e",
            "id": "rtb-03909c34037acd07e",
            "owner_id": "750427322914",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a92832a52431e493",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aws_route_postech"
            },
            "tags_all": {
              "Name": "aws_route_postech"
            },
            "timeouts": null,
            "vpc_id": "vpc-00dbc9620aff76b6a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.aws_gateway_vpc",
            "aws_vpc.aws_postech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aws_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad3bbc96f81a1380",
            "route_table_id": "rtb-03909c34037acd07e",
            "subnet_id": "subnet-095fd3186884856c6"
          },
          "dependencies": [
            "aws_internet_gateway.aws_gateway_vpc",
            "aws_route_table.aws_route_postech",
            "aws_subnet.public_subnet_a",
            "aws_vpc.aws_postech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aws_subnet_association_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a657b903550ff3a6",
            "route_table_id": "rtb-03909c34037acd07e",
            "subnet_id": "subnet-01045cb16d45671e4"
          },
          "dependencies": [
            "aws_internet_gateway.aws_gateway_vpc",
            "aws_route_table.aws_route_postech",
            "aws_subnet.public_subnet_b",
            "aws_vpc.aws_postech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws_inbound_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750427322914:security-group/sg-0ebf226ed2863b4c9",
            "description": "Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ebf226ed2863b4c9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "aws_inbound_security_group",
            "name_prefix": "",
            "owner_id": "750427322914",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00dbc9620aff76b6a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws_postech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750427322914:security-group/sg-0cbbbf671024b8cea",
            "description": "enable mysql/aurora",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cbbbf671024b8cea",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql/aurora access",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ebf226ed2863b4c9"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "database secutiry group",
            "name_prefix": "",
            "owner_id": "750427322914",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "database security group"
            },
            "tags_all": {
              "Name": "database security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-00dbc9620aff76b6a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aws_inbound_security_group",
            "aws_vpc.aws_postech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750427322914:subnet/subnet-0ea29daba1755eec0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea29daba1755eec0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "750427322914",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-00dbc9620aff76b6a"
          },
          "dependencies": [
            "aws_vpc.aws_postech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750427322914:subnet/subnet-01cb71fa20ac613de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01cb71fa20ac613de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "750427322914",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-00dbc9620aff76b6a"
          },
          "dependencies": [
            "aws_vpc.aws_postech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750427322914:subnet/subnet-095fd3186884856c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-095fd3186884856c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "750427322914",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-00dbc9620aff76b6a"
          },
          "dependencies": [
            "aws_vpc.aws_postech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750427322914:subnet/subnet-01045cb16d45671e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01045cb16d45671e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "750427322914",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-00dbc9620aff76b6a"
          },
          "dependencies": [
            "aws_vpc.aws_postech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws_postech_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750427322914:vpc/vpc-00dbc9620aff76b6a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cd86b20b1f42e2a2",
            "default_route_table_id": "rtb-059b2a8f7e48c0ca6",
            "default_security_group_id": "sg-0d2175b18512c0e2f",
            "dhcp_options_id": "dopt-0c96c317db7e1f594",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00dbc9620aff76b6a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-059b2a8f7e48c0ca6",
            "owner_id": "750427322914"
          }
        }
      ]
    }
  ]
}